--- a/src/platforms/android/include.gradle
+++ b/src/platforms/android/include.gradle
@@ -1,11 +1,7 @@
-/* Include.gradle configuration: http://docs.nativescript.org/plugins/plugins#includegradle-specification */
-
 android {
-	
+
 }
 
 dependencies {
-    // Describe plugin native Android dependencies like
-	// compile "groupName:pluginName:ver" 
-    // EXAMPLE: compile "com.facebook.fresco:fresco:0.9.0+"
+    implementation 'org.webrtc:google-webrtc:1.0.+'
 }
