--- a/demo/package.json
+++ b/demo/package.json
@@ -9,6 +9,7 @@
     }
   },
   "dependencies": {
+    "nativescript-socketio": "^3.0.2",
     "nativescript-theme-core": "^1.0.4",
     "nativescript-unit-test-runner": "^0.3.4",
     "nativescript-webrtc": "../src",
