--- a/demo/app/App_Resources/Android/app.gradle
+++ b/demo/app/App_Resources/Android/app.gradle
@@ -6,7 +6,10 @@
 //}
 
 android {
+  compileSdkVersion 28
   defaultConfig {
+    minSdkVersion 24
+    targetSdkVersion 28
     generatedDensities = []
     applicationId = "org.nativescript.demo"
   }
