--- a/demo/package.json
+++ b/demo/package.json
@@ -12,7 +12,7 @@
     "nativescript-socketio": "^3.0.2",
     "nativescript-theme-core": "^1.0.4",
     "nativescript-unit-test-runner": "^0.3.4",
-    "nativescript-webrtc": "../src",
+    "nativescript-webrtc-plugin": "../src",
     "tns-core-modules": "^4.2.0"
   },
   "devDependencies": {
