--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -17,10 +17,12 @@
         "noImplicitAny": false,
         "noImplicitReturns": true,
         "noImplicitUseStrict": false,
-        "noFallthroughCasesInSwitch": true
+        "noFallthroughCasesInSwitch": true,
+        "skipLibCheck": true
     },
     "exclude": [
-        "node_modules"
+        "node_modules",
+        "typings"
     ],
     "compileOnSave": false
 }
