--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -7,7 +7,7 @@
         "noLib": false,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "lib": ["es6","dom"],
+        "lib": ["es5","es6","es2016","es2015.collection","es2015" ,"es2015.promise"],
         "sourceMap": true,
         "pretty": true,
         "allowUnreachableCode": false,
