--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ matrix:
       script: cd demo && npm run build.plugin && npm i && tns build android --bundle --env.uglify --env.snapshot
     - language: android
       env: 
-        - BuildAndroid="27"
+        - BuildAndroid="28"
       os: linux
       jdk: oraclejdk8
       before_install: nvm install stable
@@ -44,12 +44,16 @@ android:
   components:
     - tools
     - platform-tools
-    - build-tools-27.0.3
+    - build-tools-28.0.2
+    - android-28
     - android-27
     - android-26
     - android-23
     - extra-android-m2repository
-    - sys-img-armeabi-v7a-android-21
+    - sys-img-armeabi-v7a-android-26
+  licenses:
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
 
 install:
     - echo no | npm install -g nativescript
