--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,7 @@ android:
     - tools
     - platform-tools
     - build-tools-28.0.2
+    - build-tools-27.0.3
     - android-28
     - android-27
     - android-26
