--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ matrix:
     language: node_js
     node_js: "8"
     jdk: oraclejdk8
+    before_install:
+    - travis_wait pod repo update --silent
     script:
     - cd demo && npm run build.plugin && npm i && tns build ios --bundle --env.uglify
     - cd ../publish
@@ -48,11 +50,13 @@ matrix:
   - os: osx
     env:
     - BuildiOS="11"
-    - Xcode="9.2"
+    - Xcode="9.3"
     osx_image: xcode9.3
     language: node_js
     node_js: "8"
     jdk: oraclejdk8
+    before_install:
+    - travis_wait pod repo update --silent
     script:
     - cd src && npm i && npm run tsc && cd ../demo && tns build ios && cd ../demo-ng && tns build ios
 
