--- a/demo-ng/package.json
+++ b/demo-ng/package.json
@@ -26,6 +26,7 @@
         "reflect-metadata": "~0.1.8",
         "rxjs": "~6.3.0",
         "tns-core-modules": "~5.1.0",
+        "tslint": "~5.4.3",
         "zone.js": "^0.8.26"
     },
     "devDependencies": {
