--- a/demo-ng/tsconfig.json
+++ b/demo-ng/tsconfig.json
@@ -22,7 +22,13 @@
             ]
         }
     },
+    "include": [
+        "../src",
+        "**/*"
+    ],
     "exclude": [
+        "../src/node_modules",
+        "../src/typings",
         "node_modules",
         "platforms"
     ]
