--- a/demo/package.json
+++ b/demo/package.json
@@ -22,7 +22,7 @@
     "karma-nativescript-launcher": "^0.4.0",
     "nativescript-css-loader": "~0.26.1",
     "nativescript-dev-typescript": "^0.7.9",
-    "nativescript-dev-webpack": "^0.19.0",
+    "nativescript-dev-webpack": "0.22.0",
     "tns-platform-declarations": "^5.1.2",
     "tslint": "~5.4.3",
     "typescript": "~2.8.2"
