--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
     "name": "nativescript-webrtc-plugin",
-    "version": "2.0.0-alpha.18",
+    "version": "2.0.0-alpha.19",
     "description": "WebRTC for NativeScript",
     "main": "webrtc",
     "typings": "index.d.ts",
@@ -51,28 +51,27 @@
     "homepage": "https://github.com/triniwiz/nativescript-webrtc",
     "readmeFilename": "README.md",
     "devDependencies": {
-        "@angular/common": "~7.1.0",
-        "@angular/compiler": "~7.1.0",
-        "@angular/compiler-cli": "~7.1.0",
-        "@angular/core": "~7.1.0",
-        "@angular/forms": "~7.1.0",
-        "@angular/http": "~7.1.0",
-        "@angular/platform-browser": "~7.1.0",
-        "@angular/platform-browser-dynamic": "~7.1.0",
-        "@angular/router": "~7.1.0",
-        "nativescript-angular": "~7.1.0",
+        "@angular/common": "~8.0.0",
+        "@angular/compiler": "~8.0.0",
+        "@angular/compiler-cli": "~8.0.0",
+        "@angular/core": "~8.0.0",
+        "@angular/forms": "~8.0.0",
+        "@angular/platform-browser": "~8.0.0",
+        "@angular/platform-browser-dynamic": "~8.0.0",
+        "@angular/router": "~8.0.0",
+        "nativescript-angular": "~8.0.0",
         "prompt": "^1.0.0",
         "rimraf": "^2.6.2",
-        "rxjs": "^6.3.3",
+        "rxjs": "~6.3.3",
         "semver": "^5.5.0",
-        "tns-core-modules": "^5.1.2",
-        "tns-platform-declarations": "^5.1.2",
-        "tslint": "^5.11.0",
+        "tns-core-modules": "^6.0.7",
+        "tns-platform-declarations": "^6.0.7",
+        "tslint": "~5.4.3",
         "typescript": "~3.1.1",
-        "zone.js": "^0.8.12"
+        "zone.js": "~0.9.1"
     },
     "dependencies": {
-        "nativescript-permissions": "^1.2.3"
+        "nativescript-permissions": "^1.3.7"
     },
     "bootstrapper": "nativescript-plugin-seed"
 }
