--- a/demo/package.json
+++ b/demo/package.json
@@ -2,30 +2,30 @@
   "nativescript": {
     "id": "com.github.triniwiz.nativescript.webrtc.demo.core",
     "tns-ios": {
-      "version": "5.1.1"
+      "version": "6.0.1"
     },
     "tns-android": {
-      "version": "5.1.0"
+      "version": "6.0.0"
     }
   },
   "dependencies": {
     "nativescript-socketio": "^3.0.2",
     "nativescript-theme-core": "^1.0.4",
-    "nativescript-unit-test-runner": "^0.3.4",
+    "nativescript-unit-test-runner": "0.7.0",
     "nativescript-webrtc-plugin": "../src",
-    "tns-core-modules": "^5.1.2"
+    "tns-core-modules": "6.0.1"
   },
   "devDependencies": {
     "jasmine-core": "^2.5.2",
-    "karma": "^1.3.0",
-    "karma-jasmine": "^1.0.2",
+    "karma": "4.1.0",
+    "karma-jasmine": "2.0.1",
     "karma-nativescript-launcher": "^0.4.0",
     "nativescript-css-loader": "~0.26.1",
-    "nativescript-dev-typescript": "^0.7.9",
-    "nativescript-dev-webpack": "0.22.0",
-    "tns-platform-declarations": "^5.1.2",
+    "nativescript-dev-webpack": "1.0.1",
+    "tns-platform-declarations": "6.0.1",
     "tslint": "~5.4.3",
-    "typescript": "~2.8.2"
+    "typescript": "3.4.5",
+    "karma-webpack": "3.0.5"
   },
   "scripts": {
     "build.plugin": "cd ../src && npm run build",
