--- a/.travis.yml
+++ b/.travis.yml
@@ -17,14 +17,14 @@ matrix:
         - pip install --upgrade pip
         - pip install --user --upgrade matplotlib
         - pip install six
-      script: cd demo && npm run build.plugin && npm i && tns build ios --bundle --env.uglify
+      script: cd demo && npm run build.plugin && npm i && tns build ios  --env.uglify
     - language: android
       os: linux
       env:
         - WebPack="Android"
       jdk: oraclejdk8
       before_install: nvm install 10
-      script: cd demo && npm run build.plugin && npm i && tns build android --bundle --env.uglify --env.snapshot
+      script: cd demo && npm run build.plugin && npm i && tns build android  --env.uglify --env.snapshot
     - stage: "WebPack Angular"
       os: osx
       env:
@@ -37,47 +37,22 @@ matrix:
         - pip install --upgrade pip
         - pip install --user --upgrade matplotlib
         - pip install six
-      script: cd demo-ng && npm run build.plugin && npm i && tns build ios --bundle --env.uglify --env.aot
+      script: cd demo-ng && npm run build.plugin && npm i && tns build ios  --env.uglify --env.aot
     - language: android
       os: linux
       env:
         - WebPack="Android"
       jdk: oraclejdk8
       before_install: nvm install 10
-      script: cd demo-ng && npm run build.plugin && npm i && tns build android --bundle --env.uglify --env.snapshot --env.aot
-    - stage: "Build"
-      os: linux
-      language: android
-      env:
-        - BuildAndroid="28"
-      jdk: oraclejdk8
-      before_install: nvm install stable
-      script:
-        - cd src && npm i && npm run tsc && cd ../demo && tns build android
-    - os: osx
-      env:
-        - BuildiOS="12"
-        - Xcode="10"
-      osx_image: xcode10
-      language: node_js
-      node_js: "10"
-      jdk: oraclejdk8
-      before_install:
-        - pip install --upgrade pip
-        - pip install --user --upgrade matplotlib
-        - pip install six
-      script:
-        - cd src && npm i && npm run tsc && cd ../demo && tns build ios
+      script: cd demo-ng && npm run build.plugin && npm i && tns build android  --env.uglify --env.snapshot --env.aot
 
 android:
   components:
     - tools
     - platform-tools
-    - build-tools-28.0.2
+    - build-tools-28.0.3
     - android-28
-    - android-21
     - extra-android-m2repository
-    - sys-img-armeabi-v7a-android-21
 
 install:
   - echo no | npm install -g nativescript
