--- a/demo/app/package.json
+++ b/demo/app/package.json
@@ -27,7 +27,10 @@
   "homepage": "https://github.com/NativeScript/template-hello-world-ts",
   "android": {
     "v8Flags": "--expose_gc",
-    "requireModules": ["nativescript-webrtc"]
+    "requireModules": [
+      "nativescript-webrtc"
+    ],
+    "markingMode": "none"
   },
   "devDependencies": {
     "nativescript-dev-typescript": "^0.3.0"
