--- a/src/package.json
+++ b/src/package.json
@@ -59,12 +59,13 @@
         "@angular/platform-browser": "~8.0.0",
         "@angular/platform-browser-dynamic": "~8.0.0",
         "@angular/router": "~8.0.0",
-        "nativescript-angular": "~8.0.0",
+        "@angular/animations": "^12.0.5",
+        "@nativescript/angular": "^12.0.2",
+        "@nativescript/core": "^8.0.8",
         "prompt": "^1.0.0",
         "rimraf": "^2.6.2",
         "rxjs": "~6.3.3",
         "semver": "^5.5.0",
-        "tns-core-modules": "^6.0.7",
         "tns-platform-declarations": "^6.0.7",
         "tslint": "~5.4.3",
         "typescript": "~3.4.5",
